# simple-breakout-game

./: .gitignore  CMakeLists.txt  README.md
include/app/: constants.hpp
include/core/: background.hpp  ball.hpp  brick.hpp  creature.hpp  entity.hpp  game.hpp  interactions.hpp  paddle.hpp
src/app/: CMakeLists.txt  main.cpp  random_walk.cpp
src/core/: CMakeLists.txt  background.cpp  ball.cpp  brick.cpp  entity.cpp  game.cpp  interactions.cpp  paddle.cpp
